--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
      <div class="todo-app">
-        <h2>To-Do List <img src="assets/icon.jpg"> </h2>
+        <h2>To-Do List <img src="icon.jpg"> </h2>
        
         <div class="row">
         <input type="text" id="input-box" placeholder="Add your text">
